Fixed text-align

--- a/raptus/src/Components/Styles/Person.scss
+++ b/raptus/src/Components/Styles/Person.scss
@@ -18,6 +18,7 @@
         font-size: 20px;
         font-family: 'Rowdies';
         bottom: 30px;
+        text-align: center;
         @media (max-width: 800px) {
             font-size: 16px;
             bottom: 15px;
